--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@heroicons/vue": "^2.2.0",
     "@tailwindcss/typography": "^0.5.16",
     "happy-dom": "^17.1.0",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
     "@rushstack/eslint-patch": "^1.10.5",
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vitest/eslint-plugin": "1.1.25",
     "@vue/eslint-config-prettier": "^10.2.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.18.0",
@@ -24,8 +26,7 @@
     "postcss": "^8.5.2",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.12",
-    "vite": "^6.0.11",
-    "@vitest/eslint-plugin": "1.1.25"
+    "vite": "^6.0.11"
   },
   "engines": {
     "node": ">=18.3"
