--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 4173",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "start": "node server.js"
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
     "@tailwindcss/typography": "^0.5.16",
+    "express": "^4.18.2",
     "happy-dom": "^17.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
