--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "express": "^4.18.2",
     "happy-dom": "^17.1.0",
+    "pixi.js": "^8.10.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
