--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jsdom": "^26.1.0",
     "postcss": "^8.5.2",
     "prettier": "^3.4.2",
+    "sass": "^1.89.2",
     "tailwindcss": "^3.4.12",
     "vite": "^6.0.11",
     "vitest": "^3.2.4"
