--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,8 +7,7 @@ on:
     branches: [ main, master ]
 
 jobs:
-  # Lint and Test Job
-  lint-and-test:
+  test:
     runs-on: ubuntu-latest
     
     steps:
@@ -24,18 +23,14 @@ jobs:
     - name: Install dependencies
       run: npm ci
       
-    - name: Run linter
-      run: npm run lint
-      
     - name: Run tests
       run: npm run test:run
       
     - name: Build project
       run: npm run build
       
-  # Deploy Job (only runs on main/master branch pushes)
   deploy:
-    needs: lint-and-test
+    needs: test
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
     
