--- a/package.json
+++ b/package.json
@@ -1,41 +1,29 @@
 {
-  "name": "challenge-1",
-  "version": "0.0.0",
+  "name": "greglabs-plat",
+  "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 4173",
-    "lint": "eslint . --fix",
     "start": "node server.js",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "test:run": "vitest run",
-    "render:info": "node scripts/get-render-info.js"
+    "test:run": "vitest run"
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
-    "@tailwindcss/typography": "^0.5.16",
     "express": "^4.18.2",
-    "happy-dom": "^17.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.18.0",
-    "@rushstack/eslint-patch": "^1.10.5",
-    "@testing-library/jest-dom": "^6.6.3",
     "@vitejs/plugin-vue": "^5.2.1",
-    "@vitest/eslint-plugin": "1.1.25",
-    "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.18.0",
-    "eslint-plugin-vue": "^9.32.0",
     "jsdom": "^26.1.0",
     "postcss": "^8.5.2",
-    "prettier": "^3.4.2",
     "sass": "^1.89.2",
-    "tailwindcss": "^3.4.12",
     "vite": "^6.0.11",
     "vitest": "^3.2.4"
   },
