--- a/nginx-reverse-proxy.conf
+++ b/nginx-reverse-proxy.conf
@@ -25,7 +25,7 @@ server {
     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
 
     location / {
-        proxy_pass http://greglabs-frontend:80;
+        proxy_pass http://localhost:3001;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
