--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
     "express": "^4.18.2",
+    "pixi.js": "^8.14.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
