--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroicons/vue": "^2.2.0",
     "express": "^4.18.2",
     "vue": "^3.5.13",
+    "vue-i18n": "^9.14.5",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
